[package]
name = "fileproc"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = ["Wdk_System_SystemInformation", "Win32_System_WindowsProgramming", "Wdk_Storage_FileSystem", "Win32_System_IO", "Wdk_Foundation", "Win32_Security", "Wdk_System_SystemServices", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem"] }
